[tool.poetry]
name = "starlettememleak"
version = "0.1.0"
description = ""
authors = ["gal kahana <gal.kahana@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.20.4"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
